--- a/zadani/hardcore-2020-mode/style.css
+++ b/zadani/hardcore-2020-mode/style.css
@@ -4,8 +4,9 @@ html { box-sizing: border-box; }
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    background-color: #e5e5e5;
+    background-color: white;
     box-shadow: 1px 1px 20px black;
+    max-width: 2000px;
 }
 .jedna {
     text-transform: uppercase;
@@ -14,6 +15,8 @@ body {
 .vlastnost {
     padding: 0.5rem;
     list-style-type: none;
+    flex: 1 1 50%;
+    text-align: center;
 }
 h2,
 .hlavicka {
@@ -24,16 +27,9 @@ h2,
     margin: 0;
     flex-wrap: wrap;
 }
-.jedna,
-.dve,
-.tri,
-.ctyri {
-    flex: 1 1 50%;
-    text-align: center;
-}
 .hlavicka li:hover {
     color: white;
-    /* (Toto nefunguje, stále si to bere pozadí s gradinetem z li:hover níže) background-color:#48418e; */
+    background:#48418e; 
 }
 h1 {
     font-weight: 400;
@@ -44,11 +40,10 @@ h1 {
     font-size: 20px;
     margin-bottom: 1rem;
 }
-.stahuj,
-.info {
+.tlacitko {
     border: 2px solid white;
-    border-radius: 15px;
     padding: 1rem;
+    border-radius: 15px;
     text-align: center;
     list-style-type: none;
 }
@@ -59,7 +54,6 @@ ul {
     padding-inline-start: 0;
 }
 a {
-    display: block;
     color: white;
     text-decoration: none;
     font-weight: 300;
@@ -67,10 +61,9 @@ a {
 li:hover {
     background: linear-gradient(90deg, rgba(72,65,142,1) 0%, rgba(72,65,142,1) 35%, rgba(37,19,61,1) 100%);
 }
-/* (Toto mi nefunguje - nevím proč)
-.stahuj li:hover {
-    background-color:none;
-} */
+.stahuj:hover {
+    background:none;
+} 
 .hlavni {
     background: linear-gradient(90deg, rgba(37,19,61,1) 0%, rgba(72,65,142,1) 35%, rgba(170,84,119,1) 100%);
     color: white;
@@ -96,10 +89,7 @@ img {
 }
 /*VERZE M*/
 @media (min-width: 765px) {
-    .jedna,
-    .dve,
-    .tri,
-    .ctyri {
+    .vlastnost{
         flex-grow: 0;
         flex-basis: auto;
         justify-content: flex-start;
@@ -117,9 +107,7 @@ img {
     .textova {
         display: flex;
     }
-    .cestuj,
-    .chatuj,
-    .zazij {
+    .zij{
         padding: 0.5rem;
         display: flex;
         flex-wrap: wrap;
@@ -127,13 +115,14 @@ img {
     }
     .bublina {
         order: 1;
-        flex-basis: 100%;
     }
-    h2 {
+    .nadpis {
         order: 2;
+        flex-basis: 100%;
     }
     .text {
         order: 3;
+        max-width: 350px;
     }  
 }
 
